name: amaze
version: 0.1.0

build-type: Simple
cabal-version: >= 1.10


library
  hs-source-dirs:
      src
  exposed-modules:
      Data.Maze
      Data.Maze.Cell
      Data.Stack
  build-depends:
      base >= 4.9 && < 4.10
    , containers
    , random >= 1.1 && < 1.2
  default-language:
      Haskell2010
  ghc-options:
      -Wall


executable amaze
  main-is:
      Main.hs
  build-depends:
      base
    , amaze
  default-language:
      Haskell2010
  ghc-options:
      -Wall -threaded -rtsopts -with-rtsopts=-N
